dx/force-app/main/default/objects/ltng_M2M_Partner__c/ltng_M2M_Partner__c.object-meta.xml
<CustomObject>
    <description>Stand in for a partner relationship between two account records.</description>
    <label>M2M Partner</label>
    <nameField>
        <displayFormat>part-{000000}</displayFormat>
        <label>M2M Partner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>M2M Partners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>