dx/force-app/main/default/objects/ltng_M2M_Partner__c/fields/AccountFromId__c.field-meta.xml
<CustomField>
    <fullName>AccountFromId__c</fullName>
    <inlineHelpText>ID of the main Account in a partner relationship between two accounts. Specifying this field when creating a Partner record creates two AccountPartner objects, one for each direction of the relationship.</inlineHelpText>
    <label>Account From</label>
    <referenceTo>ltng_M2M_Account__c</referenceTo>
    <relationshipLabel>Partners From</relationshipLabel>
    <relationshipName>PartnersFrom</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>