dx/force-app/main/default/objects/ltng_M2M_Partner__c/fields/AccountToId__c.field-meta.xml
<CustomField>
    <fullName>AccountToId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Required. ID of the Partner Account related to either an opportunity or an account. You must specify this field when creating an opportunity Partner or an Account Partner.</inlineHelpText>
    <label>Account To</label>
    <referenceTo>ltng_M2M_Account__c</referenceTo>
    <relationshipLabel>Partners To</relationshipLabel>
    <relationshipName>PartnersTo</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>