dx/force-app/main/default/objects/ltng_M2M_Partner__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <inlineHelpText>UserRole that the account has towards the related opportunity or account, such as consultant or distributor.</inlineHelpText>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>