dx/force-app/main/default/objects/ltng_M2M_Partner__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AccountFromId__c</columns>
    <columns>AccountToId__c</columns>
    <columns>Role__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>